# kstore

./: .gitignore  README.md  meson.build  pam_kstore.c  user_kstore  util.c  util.h
debian/: changelog  control  copyright  files  kstore.install  libpam-kstore.install  postinst  prerm  rules
debian/pam-configs/: kstore
scripts/: user_kstore
src/: pam_kstore.c  util.c
